--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,1 @@
-/*  your css code here. If applicable */
- .block-heading {
-      color: #3b99e0;
-      text-align: center;
-    }
-    .summary {
-      padding: 20px;
-      border-bottom: 1px solid #5ea4f3;
-      background-color: #f7fbff;
-    }
-    .summary button {
-      background-color: #3b99e0;
-      color: white;
-      border: none;
-    }
-    .product {
-      margin-bottom: 20px;
-    }
+/*  your css code here. If applicable *
